; ModuleID = '/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_template_lib.c_ima_eventmodsig_init.c'
source_filename = "/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_template_lib.c_ima_eventmodsig_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ima_event_data = type { i32 }
%struct.ima_field_data = type { i32 }

@DATA_FMT_HEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ima_eventmodsig_init(%struct.ima_event_data* %0, %struct.ima_field_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ima_event_data*, align 8
  %5 = alloca %struct.ima_field_data*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ima_event_data* %0, %struct.ima_event_data** %4, align 8
  store %struct.ima_field_data* %1, %struct.ima_field_data** %5, align 8
  %9 = load %struct.ima_event_data*, %struct.ima_event_data** %4, align 8
  %10 = getelementptr inbounds %struct.ima_event_data, %struct.ima_event_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

14:                                               ; preds = %2
  %15 = load %struct.ima_event_data*, %struct.ima_event_data** %4, align 8
  %16 = getelementptr inbounds %struct.ima_event_data, %struct.ima_event_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @ima_get_raw_modsig(i32 %17, i8** %6, i32* %7)
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %3, align 4
  br label %29

23:                                               ; preds = %14
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @DATA_FMT_HEX, align 4
  %27 = load %struct.ima_field_data*, %struct.ima_field_data** %5, align 8
  %28 = call i32 @ima_write_template_field_data(i8* %24, i32 %25, i32 %26, %struct.ima_field_data* %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %23, %21, %13
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @ima_get_raw_modsig(i32, i8**, i32*) #1

declare dso_local i32 @ima_write_template_field_data(i8*, i32, i32, %struct.ima_field_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
